--- a/Egovernance.csproj
+++ b/Egovernance.csproj
@@ -9,9 +9,6 @@
 
     <ItemGroup>
         <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true"/>
-        <None Update="Views\License\SelectVehicle.css">
-          <DependentUpon>SelectVehicle.cshtml</DependentUpon>
-        </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +17,16 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\License\SelectVehicle.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\License\SelectedVehicle.cshtml.cs">
+        <DependentUpon>SelectVehicle.cshtml</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
