--- a/Egovernance.csproj
+++ b/Egovernance.csproj
@@ -23,4 +23,8 @@
       <_ContentIncludedByDefault Remove="Views\License\SelectVehicle.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Views\Profile\" />
+    </ItemGroup>
+
 </Project>
