--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
-[Bb]in/
-[Oo]bj/
+bin/
+obj/
 
 app.db
+app.db-shm
+app.db-wal
 # Logs
 Logs/
 
